--- a/tropicalBlast/css/style.css
+++ b/tropicalBlast/css/style.css
@@ -43,6 +43,8 @@ a {
   width: 100%;
   height: 287px;
   background-repeat: none;
+  background-size: cover;
+  background-position: center;
   padding: 1em 16.5em;
 }
 @media only screen and (max-width: 480px) {
@@ -115,12 +117,13 @@ a {
   overflow: hidden;
   background-image: url(../imgs/artista1.jpg);
   border-radius: 1em;
+  background-size: cover;
+  background-position: center;
 }
 @media only screen and (max-width: 480px) {
   .containerActivity1 {
-    width: 96px;
+    width: 105px;
     height: 208px;
-    background-image: url(../imgs/artista6.jpg);
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 979px) {
@@ -135,17 +138,24 @@ a {
   overflow: hidden;
   background-image: url(../imgs/artista2.jpg);
   border-radius: 1em;
+  background-size: cover;
+  background-position: center;
 }
 @media only screen and (max-width: 480px) {
   .containerActivity2 {
-    width: 96px;
+    width: 105px;
     height: 208px;
-    background-image: url(../imgs/artista6.jpg);
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 979px) {
   .containerActivity2 {
     width: 215px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  p {
+    margin: 0;
   }
 }
 
@@ -155,12 +165,13 @@ a {
   overflow: hidden;
   background-image: url(../imgs/artista3.png);
   border-radius: 1em;
+  background-size: cover;
+  background-position: center;
 }
 @media only screen and (max-width: 480px) {
   .containerActivity3 {
-    width: 96px;
+    width: 105px;
     height: 208px;
-    background-image: url(../imgs/artista6.jpg);
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 979px) {
@@ -170,7 +181,7 @@ a {
 }
 
 .lugarpad {
-  padding: 0 0 0 1.1em;
+  padding: 0 0 0 5.3em;
 }
 
 .containerInfo {
@@ -182,7 +193,7 @@ a {
 @media only screen and (max-width: 480px) {
   .containerInfo {
     height: 10px;
-    margin: 5.5em 0 0 0;
+    margin: 6.5em 0 0 0;
     padding: 0 0.5em;
   }
 }
@@ -207,10 +218,12 @@ a {
   padding: 0 1em;
   background-image: url(../imgs/artista5.jpg);
   border-radius: 1em;
+  background-size: cover;
+  background-position: center;
 }
 @media only screen and (max-width: 480px) {
   .containerSubAct5 {
-    width: 190px;
+    width: 157px;
     height: 66px;
   }
 }
@@ -227,12 +240,14 @@ a {
   padding: 0 1em;
   background-image: url(../imgs/artista6.jpg);
   border-radius: 1em;
+  background-size: cover;
+  background-position: center;
 }
 @media only screen and (max-width: 480px) {
   .containerSubAct6 {
-    width: 190px;
+    width: 157px;
     height: 66px;
-    margin: 0em 0em 0em 12px;
+    margin: 0em 0em 0em 3.7em;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 979px) {
@@ -249,13 +264,14 @@ a {
   border-radius: 1em;
   padding: 0 1em;
   margin: 0em 0 0 1.5em;
+  background-size: cover;
+  background-position: center;
 }
 @media only screen and (max-width: 480px) {
   .containerSubAct4 {
-    width: 115px;
+    width: 157px;
     height: 66px;
     margin: 0;
-    padding: 0 0.1em;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 979px) {
@@ -272,12 +288,13 @@ a {
   background-image: url(../imgs/artista7.jpg);
   border-radius: 1em;
   padding: 0 1em;
+  background-size: cover;
+  background-position: center;
 }
 @media only screen and (max-width: 480px) {
   .containerSubAct7 {
-    width: 115px;
+    width: 157px;
     height: 66px;
-    padding: 0 0.1em;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 979px) {
@@ -291,6 +308,8 @@ a {
   height: 4.4em;
   overflow: hidden;
   margin: 0em 0.9em 0em 0em;
+  background-size: cover;
+  background-position: center;
 }
 @media only screen and (max-width: 480px) {
   .containerLugar {
@@ -340,7 +359,7 @@ a {
 }
 @media only screen and (max-width: 480px) {
   .containerFechaLarge {
-    margin: 0 0 0 -1.4em;
+    margin: 0 0 0 -1.8em;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 979px) {
@@ -452,12 +471,12 @@ a {
 }
 @media only screen and (max-width: 480px) {
   .textDetail {
-    font-size: 9pt;
+    font-size: 12pt;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 979px) {
   .textDetail {
-    font-size: 12pt;
+    font-size: 16pt;
   }
 }
 
@@ -564,6 +583,8 @@ a {
   background-color: #34656D;
   padding: 2em 3em;
   border-radius: 1em;
+  background-size: cover;
+  background-position: center;
 }
 @media only screen and (max-width: 480px) {
   .containerDetailInfo {
@@ -637,6 +658,8 @@ a {
   border-radius: 50%;
   background-image: url(../imgs/artista6.jpg);
   padding: 1em 0;
+  background-size: cover;
+  background-position: center;
 }
 @media only screen and (max-width: 480px) {
   .circulo {
